jsonnet/k8s/kubernetes.yaml
apiVersion: v1
items:
- apiVersion: flux.weave.works/v1beta1
  kind: HelmRelease
  metadata:
    annotations:
      flux.weave.works/automated: "false"
    labels:
      name: autoscaler
    name: autoscaler
    namespace: autoscaler
  spec:
    chart:
      name: cluster-autoscaler
      repository: https://kubernetes-charts.storage.googleapis.com/
      version: 0.14.2
    releaseName: autoscaler
    values:
      autoDiscovery:
        clusterName: development
      awsRegion: us-west-2
      extraArgs:
        logtostderr: true
        skip-nodes-with-local-storage: false
        stderrthreshold: info
        v: 4
      podAnnotations:
        iam.amazonaws.com/role: development-autoscaler-role
      rbac:
        create: true
      serviceMonitor:
        enabled: true
      sslCertHostPath: /etc/ssl/certs/ca-bundle.crt
- apiVersion: v1
  kind: Namespace
  metadata:
    annotations:
      iam.amazonaws.com/permitted: development-autoscaler-role
    name: autoscaler
- apiVersion: flux.weave.works/v1beta1
  kind: HelmRelease
  metadata:
    annotations:
      flux.weave.works/automated: "false"
    labels:
      name: cert-manager
    name: cert-manager
    namespace: cert-manager
  spec:
    chart:
      name: cert-manager
      repository: https://charts.jetstack.io
      version: v0.8.1
    releaseName: cert-manager
    values:
      podAnnotations:
        iam.amazonaws.com/role: development-cert-manager-role
- apiVersion: v1
  kind: Namespace
  metadata:
    annotations:
      iam.amazonaws.com/permitted: development-cert-manager-role
    name: cert-manager
- apiVersion: certmanager.k8s.io/v1alpha1
  kind: ClusterIssuer
  metadata:
    name: letsencrypt-production
    namespace: cert-manager
  spec:
    acme:
      email: derrick@tidepool.org
      privateKeySecretRef:
        name: letsencrypt-production
      server: https://acme-v02.api.letsencrypt.org/directory
      solvers:
      - dns01:
          route53:
            region: us-west-2
- apiVersion: certmanager.k8s.io/v1alpha1
  kind: ClusterIssuer
  metadata:
    name: letsencrypt-staging
    namespace: cert-manager
  spec:
    acme:
      email: derrick@tidepool.org
      privateKeySecretRef:
        name: letsencrypt-staging
      server: https://acme-staging-v02.api.letsencrypt.org/directory
      solvers:
      - dns01:
          route53:
            region: us-west-2
- apiVersion: flux.weave.works/v1beta1
  kind: HelmRelease
  metadata:
    annotations:
      flux.weave.works/automated: "false"
    labels:
      name: datadog-agent
    name: datadog-agent
    namespace: datadog
  spec:
    chart:
      name: datadog
      repository: https://kubernetes-charts.storage.googleapis.com/
      version: 1.32.2
    releaseName: datadog-datadog-agent
    values:
      clusterAgent:
        enabled: true
        metricsProvider:
          enabled: true
      datadog:
        apiKeyExistingSecret: datadog
        appKeyExistingSecret: datadog
        clusterName: development
        logLevel: debug
        tokenExistingSecret: datadog
      kubeStateMetrics:
        enabled: true
- apiVersion: v1
  kind: Namespace
  metadata:
    name: datadog
- apiVersion: flux.weave.works/v1beta1
  kind: HelmRelease
  metadata:
    annotations:
      flux.weave.works/automated: "false"
    labels:
      name: external-dns
    name: external-dns
    namespace: external-dns-system
  spec:
    chart:
      name: external-dns
      repository: https://kubernetes-charts.storage.googleapis.com/
      version: 2.5.3
    releaseName: external-dns-system-external-dns
    values:
      aws:
        region: us-west-2
        zoneType: public
      logLevel: debug
      metrics:
        enabled: true
      podAnnotations:
        iam.amazonaws.com/role: development-external-dns-role
      rbac:
        create: true
      txtOwnerId: development
- apiVersion: v1
  kind: Namespace
  metadata:
    annotations:
      iam.amazonaws.com/permitted: development-external-dns-system-role
    name: external-dns-system
- - apiVersion: kubernetes-client.io/v1
    kind: ExternalSecret
    metadata:
      labels:
        name: auth
      name: auth
    secretDescriptor:
      backendType: secretsManager
      data:
      - key: development/default/auth
        name: ServiceAuth
        property: ServiceAuth
  - apiVersion: kubernetes-client.io/v1
    kind: ExternalSecret
    metadata:
      labels:
        name: blob
      name: blob
    secretDescriptor:
      backendType: secretsManager
      data:
      - key: development/default/blob
        name: ServiceAuth
        property: ServiceAuth
  - apiVersion: kubernetes-client.io/v1
    kind: ExternalSecret
    metadata:
      labels:
        name: carelink
      name: carelink
    secretDescriptor:
      backendType: secretsManager
      data:
      - key: development/default/carelink
        name: CareLinkSalt
        property: CareLinkSalt
  - apiVersion: kubernetes-client.io/v1
    kind: ExternalSecret
    metadata:
      labels:
        name: data
      name: data
    secretDescriptor:
      backendType: secretsManager
      data:
      - key: development/default/data
        name: ServiceAuth
        property: ServiceAuth
  - apiVersion: kubernetes-client.io/v1
    kind: ExternalSecret
    metadata:
      labels:
        name: dexcom
      name: dexcom
    secretDescriptor:
      backendType: secretsManager
      data:
      - key: development/default/dexcom
        name: ClientId
        property: ClientId
      - key: development/default/dexcom
        name: ClientSecret
        property: ClientSecret
      - key: development/default/dexcom
        name: StateSalt
        property: StateSalt
  - apiVersion: kubernetes-client.io/v1
    kind: ExternalSecret
    metadata:
      labels:
        name: export
      name: export
    secretDescriptor:
      backendType: secretsManager
      data:
      - key: development/default/export
        name: SessionEncryptionKey
        property: SessionEncryptionKey
  - apiVersion: kubernetes-client.io/v1
    kind: ExternalSecret
    metadata:
      labels:
        name: highwater
      name: highwater
    secretDescriptor:
      backendType: secretsManager
      data:
      - key: development/default/highwater
        name: UserIdSalt
        property: UserIdSalt
  - apiVersion: kubernetes-client.io/v1
    kind: ExternalSecret
    metadata:
      labels:
        name: image
      name: image
    secretDescriptor:
      backendType: secretsManager
      data:
      - key: development/default/image
        name: ServiceAuth
        property: ServiceAuth
  - apiVersion: kubernetes-client.io/v1
    kind: ExternalSecret
    metadata:
      labels:
        name: kissmetrics
      name: kissmetrics
    secretDescriptor:
      backendType: secretsManager
      data:
      - key: development/default/kissmetrics
        name: KissmetricsAPIKey
        property: KissmetricsAPIKey
      - key: development/default/kissmetrics
        name: KissmetricsToken
        property: KissmetricsToken
      - key: development/default/kissmetrics
        name: UCSFKissmetricsAPIKey
        property: UCSFKissmetricsAPIKey
      - key: development/default/kissmetrics
        name: UCSFWhitelist
        property: UCSFWhitelist
  - apiVersion: kubernetes-client.io/v1
    kind: ExternalSecret
    metadata:
      labels:
        name: mailchimp
      name: mailchimp
    secretDescriptor:
      backendType: secretsManager
      data:
      - key: development/default/mailchimp
        name: MailchimpApiKey
        property: MailchimpApiKey
      - key: development/default/mailchimp
        name: MailchimpClinicLists
        property: MailchimpClinicLists
      - key: development/default/mailchimp
        name: MailchimpPersonalLists
        property: MailchimpPersonalLists
      - key: development/default/mailchimp
        name: MailchimpURL
        property: MailchimpURL
  - apiVersion: kubernetes-client.io/v1
    kind: ExternalSecret
    metadata:
      labels:
        name: mongo
      name: mongo
    secretDescriptor:
      backendType: secretsManager
      data:
      - key: development/default/mongo
        name: Addresses
        property: Addresses
      - key: development/default/mongo
        name: Database
        property: Database
      - key: development/default/mongo
        name: Password
        property: Password
      - key: development/default/mongo
        name: Scheme
        property: Scheme
      - key: development/default/mongo
        name: Tls
        property: Tls
      - key: development/default/mongo
        name: Username
        property: Username
  - apiVersion: kubernetes-client.io/v1
    kind: ExternalSecret
    metadata:
      labels:
        name: notification
      name: notification
    secretDescriptor:
      backendType: secretsManager
      data:
      - key: development/default/notification
        name: ServiceAuth
        property: ServiceAuth
  - apiVersion: kubernetes-client.io/v1
    kind: ExternalSecret
    metadata:
      labels:
        name: server
      name: server
    secretDescriptor:
      backendType: secretsManager
      data:
      - key: development/default/server
        name: ServiceAuth
        property: ServiceAuth
  - apiVersion: kubernetes-client.io/v1
    kind: ExternalSecret
    metadata:
      labels:
        name: shoreline
      name: shoreline
    secretDescriptor:
      backendType: secretsManager
      data:
      - key: development/default/shoreline
        name: ClinicDemoUserId
        property: ClinicDemoUserId
      - key: development/default/shoreline
        name: ServiceAuth
        property: ServiceAuth
      - key: development/default/shoreline
        name: UserLongTermKey
        property: UserLongTermKey
      - key: development/default/shoreline
        name: UserMailVerification
        property: UserMailVerification
      - key: development/default/shoreline
        name: UserPasswordSalt
        property: UserPasswordSalt
  - apiVersion: kubernetes-client.io/v1
    kind: ExternalSecret
    metadata:
      labels:
        name: task
      name: task
    secretDescriptor:
      backendType: secretsManager
      data:
      - key: development/default/task
        name: ServiceAuth
        property: ServiceAuth
  - apiVersion: kubernetes-client.io/v1
    kind: ExternalSecret
    metadata:
      labels:
        name: user
      name: user
    secretDescriptor:
      backendType: secretsManager
      data:
      - key: development/default/user
        name: ServiceAuth
        property: ServiceAuth
  - apiVersion: kubernetes-client.io/v1
    kind: ExternalSecret
    metadata:
      labels:
        name: user-data
      name: user-data
    secretDescriptor:
      backendType: secretsManager
      data:
      - key: development/default/user-data
        name: GroupIdEncryptionKey
        property: GroupIdEncryptionKey
      - key: development/default/user-data
        name: UserIdSalt
        property: UserIdSalt
      - key: development/default/user-data
        name: UserPasswordSalt
        property: UserPasswordSalt
  - apiVersion: kubernetes-client.io/v1
    kind: ExternalSecret
    metadata:
      labels:
        name: datadog-agent
      name: datadog-agent
    secretDescriptor:
      backendType: secretsManager
      data:
      - key: development/datadog/datadog-agent
        name: apiKey
        property: apiKey
      - key: development/datadog/datadog-agent
        name: appKey
        property: appKey
      - key: development/datadog/datadog-agent
        name: token
        property: token
  - apiVersion: kubernetes-client.io/v1
    kind: ExternalSecret
    metadata:
      labels:
        name: fluxcloud
      name: fluxcloud
    secretDescriptor:
      backendType: secretsManager
      data:
      - key: development/flux/fluxcloud
        name: url
        property: url
  - apiVersion: kubernetes-client.io/v1
    kind: ExternalSecret
    metadata:
      labels:
        name: sumologic-fluentd
      name: sumologic-fluentd
    secretDescriptor:
      backendType: secretsManager
      data:
      - key: development/sumologic/sumologic-fluentd
        name: collectorUrl
        property: collectorUrl
- apiVersion: flux.weave.works/v1beta1
  kind: HelmRelease
  metadata:
    annotations:
      flux.weave.works/automated: "false"
    labels:
      name: external-secrets
    name: external-secrets
    namespace: external-secrets
  spec:
    chart:
      git: git@github.com:godaddy/kubernetes-external-secrets
      path: charts/kubernetes-external-secrets
      ref: master
    releaseName: external-secrets
    values:
      podAnnotations:
        iam.amazonaws.com/role: development-external-secrets-role
- apiVersion: v1
  kind: Namespace
  metadata:
    annotations:
      iam.amazonaws.com/permitted: development-external-secrets-role
    name: external-secrets
- apiVersion: flux.weave.works/v1beta1
  kind: HelmRelease
  metadata:
    annotations:
      flux.weave.works/automated: "false"
    labels:
      name: fluxcloud
    name: fluxcloud
    namespace: flux
  spec:
    chart:
      git: git@github.com:tidepool-org/development
      path: charts/fluxcloud/0.1.0
      ref: k8s
    releaseName: flux-fluxcloud
    values:
      github: https://github.com/tidepool-org/cluster-development
      name: fluxcloud
      secretName: slack
      slack:
        channel: '#flux-development'
        username: derrickburns
- apiVersion: gateway.solo.io.v2/v2
  kind: Gateway
  metadata:
    annotations:
      origin: default
    name: gateway-ssl
    namespace: gloo-system
  spec:
    bindAddress: '::'
    bindPort: 8443
    gatewayProxyName: gateway-proxy-v2
    plugins:
      accessLoggingService:
        accessLog:
        - fileSink:
            jsonFormat:
              authority: '%REQ(:AUTHORITY)%'
              bytesReceived: '%BYTES_RECEIVED%'
              bytesSent: '%BYTES_SENT%'
              duration: '%DURATION%'
              method: '%REQ(:METHOD)%'
              path: '%REQ(X-ENVOY-ORIGINAL-PATH?:PATH)%'
              protocol: '%PROTOCOL%'
              responseCode: '%RESPONSE_CODE%'
              sessionToken: '%REQ(x-tidepool-session-token)%'
              startTime: '%START_TIME(%Y/%m/%dT%H:%M:%S%z %s)%'
            path: /dev/stdout
    ssl: true
    useProxyProto: false
- apiVersion: flux.weave.works/v1beta1
  kind: HelmRelease
  metadata:
    annotations:
      flux.weave.works/automated: "false"
    labels:
      name: gloo
    name: gloo
    namespace: gloo-system
  spec:
    chart:
      name: gloo
      repository: https://storage.googleapis.com/solo-public-helm/
      version: 0.18.16
    releaseName: gloo-system-gloo
    values:
      crds:
        create: false
      discovery:
        deployment:
          stats: true
      gateway:
        deployment:
          stats: true
      gatewayProxies:
        gatewayProxyV2:
          podTemplate:
            stats: true
          service:
            extraAnnotations:
              external-dns.alpha.kubernetes.io/alias: true
              external-dns.alpha.kubernetes.io/hostname: ""
              service.beta.kubernetes.io/aws-load-balancer-additional-resource-tags: cluster:development
              service.beta.kubernetes.io/aws-load-balancer-type: nlb
            httpPort: 80
            httpsPort: 443
            type: LoadBalancer
      gloo:
        deployment:
          stats: true
      settings:
        create: true
- apiVersion: v1
  kind: Namespace
  metadata:
    name: gloo-system
- apiVersion: flux.weave.works/v1beta1
  kind: HelmRelease
  metadata:
    annotations:
      flux.weave.works/automated: "false"
    labels:
      name: kiam
    name: kiam
    namespace: kube-system
  spec:
    chart:
      name: kiam
      repository: https://kubernetes-charts.storage.googleapis.com/
      version: 2.3.0
    releaseName: kube-system-kiam
    values:
      agent:
        enabled: true
        extraHostPathMounts:
        - hostPath: /etc/pki/ca-trust/extracted/pem
          mountPath: /etc/ssl/certs
          name: ssl-certs
          readOnly: true
        gatewayTimeoutCreation: 1s
        host:
          interface: '!eth0'
          iptables: true
        image:
          tag: d999e61e28befb872cd1875812c9d1bf37dc4f37
        log:
          level: debug
      server:
        enabled: true
        extraArgs:
          assume-role-arn: development-kiam-role
          region: us-west-2
        extraHostPathMounts:
        - hostPath: /etc/pki/ca-trust/extracted/pem
          mountPath: /etc/ssl/certs
          name: ssl-certs
          readOnly: true
        image:
          tag: d999e61e28befb872cd1875812c9d1bf37dc4f37
        log:
          level: debug
        nodeSelector:
          kiam-server: "true"
        tolerations:
        - effect: NoExecute
          key: kiam-server
          operator: Equal
          value: "false"
        useHostNetwork: true
- apiVersion: flux.weave.works/v1beta1
  kind: HelmRelease
  metadata:
    annotations:
      flux.weave.works/automated: "false"
    labels:
      name: kube-state-metrics
    name: kube-state-metrics
    namespace: datadog
  spec:
    chart:
      name: kube-state-metrics
      repository: https://kubernetes-charts.storage.googleapis.com/
      version: 2.2.1
    releaseName: datadog-kube-state-metrics
    values:
      hostNetwork:
        enabled: true
- apiVersion: flux.weave.works/v1beta1
  kind: HelmRelease
  metadata:
    annotations:
      flux.weave.works/automated: "false"
    labels:
      name: metrics-server
    name: metrics-server
    namespace: metrics-server
  spec:
    chart:
      name: metrics-server
      repository: https://kubernetes-charts.storage.googleapis.com/
      version: 2.8.2
    releaseName: metrics-server
- apiVersion: v1
  kind: Namespace
  metadata:
    name: metrics-server
- apiVersion: flux.weave.works/v1beta1
  kind: HelmRelease
  metadata:
    annotations:
      flux.weave.works/automated: "false"
    labels:
      name: prometheus-operator
    name: prometheus-operator
    namespace: monitoring
  spec:
    chart:
      name: prometheus-operator
      repository: https://kubernetes-charts.storage.googleapis.com/
      version: 5.13.0
    releaseName: monitoring-prometheus-operator
    values:
      grafana:
        enabled: false
      prometheus:
        prometheusSpec:
          externalLabels:
            geo: us
            region: us-west-2
          image:
            tag: v2.8.0
          replicas: 2
          retention: 12h
          serviceMonitorNamespaceSelector:
            any: true
          thanos:
            objectStorageConfig:
              key: thanos.yaml
              name: thanos-objstore-config
            tag: v0.3.1
- apiVersion: v1
  kind: Namespace
  metadata:
    name: monitoring
- apiVersion: flux.weave.works/v1beta1
  kind: HelmRelease
  metadata:
    annotations:
      flux.weave.works/automated: "false"
    labels:
      name: reloader
    name: reloader
    namespace: reloader
  spec:
    chart:
      name: reloader
      repository: https://stakater.github.io/stakater-charts/
      version: v0.0.38
    releaseName: reloader
- apiVersion: v1
  kind: Namespace
  metadata:
    name: reloader
- apiVersion: flux.weave.works/v1beta1
  kind: HelmRelease
  metadata:
    annotations:
      flux.weave.works/automated: "false"
    labels:
      name: sumologic-fluentd
    name: sumologic-fluentd
    namespace: sumologic
  spec:
    chart:
      name: sumologic-fluentd
      repository: https://kubernetes-charts.storage.googleapis.com/
      version: 1.1.0
    releaseName: sumologic-sumologic-fluentd
    values:
      rbac:
        create: true
      readFromHead: false
      sourceCategoryPrefix: development
      sumologic:
        collectorUrlExistingSecret: sumologic
- apiVersion: v1
  kind: Namespace
  metadata:
    name: sumologic
- apiVersion: v1
  data:
    thanos.yaml: ImNvbmZpZyI6CiAgImJ1Y2tldCI6ICJ0aWRlcG9vbC10aGFub3MiCiAgImVuY3J5cHRfc3NlIjogZmFsc2UKICAiZW5kcG9pbnQiOiAiczMudXMtd2VzdC0yLmFtYXpvbmF3cy5jb20iCiAgImh0dHBfY29uZmlnIjoKICAgICJpZGxlX2Nvbm5fdGltZW91dCI6ICIwcyIKICAgICJpbnNlY3VyZV9za2lwX3ZlcmlmeSI6IGZhbHNlCiAgICAicmVzcG9uc2VfaGVhZGVyX3RpbWVvdXQiOiAiMHMiCiAgImluc2VjdXJlIjogZmFsc2UKICAicHV0X3VzZXJfbWV0YWRhdGEiOiB7fQogICJyZWdpb24iOiAidXMtd2VzdC0yIgogICJzaWduYXR1cmVfdmVyc2lvbjIiOiBmYWxzZQogICJ0cmFjZSI6CiAgICAiZW5hYmxlIjogZmFsc2UKInR5cGUiOiA [...]
  kind: Secret
  metadata:
    labels:
      cluster: development
    name: thanos
    namespace: monitoring
  type: Opaque
- apiVersion: flux.weave.works/v1beta1
  kind: HelmRelease
  metadata:
    annotations:
      flux.weave.works/automated: "false"
    labels:
      name: flux
    name: flux
    namespace: flux
  spec:
    chart:
      name: flux
      repository: https://fluxcd.github.io/
      version: 0.10.2
    releaseName: flux
    values:
      additionalArgs:
      - --connect=ws://fluxcloud
      customRepositories:
        apiVersion: v1
        repositories:
        - caFile: ""
          cache: jetstack-index.yaml
          certFile: ""
          keyFile: ""
          name: jetstack
          password: ""
          url: https://charts.jetstack.io/
          username: ""
        - caFile: ""
          cache: stable-index.yaml
          certFile: ""
          keyFile: ""
          name: stable
          password: ""
          url: https://kubernetes-charts.storage.googleapis.com/
          username: ""
        - caFile: ""
          cache: stakater-index.yaml
          certFile: ""
          keyFile: ""
          name: stakater
          password: ""
          url: https://stakater.github.io/stakater-charts/
          username: ""
        - caFile: ""
          cache: gloo-index.yaml
          certFile: ""
          keyFile: ""
          name: gloo
          password: ""
          url: https://storage.googleapis.com/solo-public-helm/
          username: ""
      git:
        branch: master
        label: development
        path: cluster/development/flux
        secretName: git-deploy-secret
        url: https://github.com/tidepool-org/cluster-development
      rbac:
        create: true
- apiVersion: tidepool/v1beta1
  kind: URLRelease
  metadata:
    labels:
      name: flux
    name: flux
  url: https://raw.githubusercontent.com/fluxcd/flux/master/deploy-helm/flux-helm-release-crd.yaml
kind: List
